tests/golden/errors/charcode-multichar.nv
fn main() {
    print(charcode("ab"))
}
